--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "start": "node src/app.js",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build": "babel src -d dist"
   },
   "dependencies": {
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.27.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^9.24.0",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
