--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "ci-trainings",
   "version": "1.0.0",
   "description": "Simple Node.js app to demonstrate GitHub Actions",
-  "main": "src/app.js",
+  "type": "commonjs",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "tsc; node dist/app.js",
     "test": "jest",
     "lint": "eslint .",
-    "build": "babel src -d dist"
+    "build": "tsc"
   },
   "dependencies": {
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.27.0",
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^9.24.0",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.24.0",
-    "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "supertest": "^7.1.0"
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   }
 }
