--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc; node dist/app.js",
+    "start": "tsc && node dist/app.js",
     "test": "jest",
     "lint": "eslint .",
     "build": "tsc"
