--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -16,6 +16,7 @@ jobs:
           node-version: 22
       - name: Install dependencies
         run: npm ci
+      - run: npm audit --audit-level=high
       - name: Linting
         run: npm run lint
       - name: Run test
