--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -23,3 +23,8 @@ jobs:
         run: npm run test
       - name: Build project
         run: npm run build
+      - name: Render deployment
+        env:
+          deploy-url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: |
+          curl "$deploy-url" 
