--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,11 +1,17 @@
 name: Render deployment
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Select environment"
+        required: true
+        type: environment
 
 jobs:
   Render-Deployment:
       runs-on: ubuntu-latest
+      environment: ${{ inputs.environment }}
       steps:
         - name: Render deployment
           env:
