--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -3,11 +3,12 @@ name: Node-CI-workflow
 on:
   push:
     branches: [main]
+    tags: ["v*"]
   pull_request:
     branches: [main]
 
 jobs:
-  Node-Ci:
+  Node-CI:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -23,3 +24,14 @@ jobs:
         run: npm run test
       - name: Build project
         run: npm run build
+  
+  Render-Deployment:
+      runs-on: ubuntu-latest
+      needs: Node-CI     
+      steps:
+        - name: Render deployment
+          if: startsWith(github.ref, 'refs/tags/')
+          env:
+            deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+          run: |
+            curl $deploy_url
